--- a/config/database.yml
+++ b/config/database.yml
@@ -24,9 +24,17 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
+  adapter: mysql2
+  database: kingdom_slaves
+  username: root
+  password: Strokerb3
+  host: localhost
+  socket: /tmp/mysql.sock
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: mysql2
+  database: kingdom_slaves
+  username: root
+  password: Strokerb3
+  host: localhost
+  socket: /tmp/mysql.sock
